equatora/src/pages/Home.css
#home-body {
    background-color: white;
    width: 100vw;
    height: 100vh;
}

#navbar {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    background-color: transparent;
    width: 100vw;
    height: 140px;
}

#logoName {
    display: flex;
    align-items: center;
    width: 40%;
    height: 100%;
}

#logoIMG {
    height: 100%;
    width: 140px;
    margin-left: 50px;
}

#name {
    display: flex;
    align-items: center;
    font-family: DynaPuff, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color: var(--secondary-color);
    margin: 0;
    height: 100%;
    width: 200px;
    font-size: 36px;
}

#home-buttons-container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    width: 60%;
    height: 100%;
    padding-right: calc((50% - 670px) / 2);
}

.btnLanding {
    font-family: Public Sans, cursive;
    font-size: 18px;
    font-weight: 700;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

#learnMore {
    color: var(--secondary-color);
    background-color: white;
    margin-right: 1rem;
    width: 115px;
}

#exploreProblems {
    box-shadow: inset 0 0 0 0.2rem var(--accent-color);
    color: var(--accent-color);
    margin-right: 1rem;
    width: 207px;
}

#enrollNow {
    background-color: var(--mid-main-secondary);
    color: var(--secondary-color);
    width: 140px;
}

#hero {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: calc(100vh - 140px);
}

#hero-left {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50%;
    height: 100%;
    margin-left: 50px;
    flex-direction: column;
}

#hero-title {
    flex-direction: row;
    color: black;
    font-family: Inter, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    height: 285px;
    width: 637px;
    font-size: 75px;
    font-weight: 850;
    margin: 0;
    text-align: left;
}

#hero-description {
    width: 637px;
    height: 124px;
    color: var(--secondary-color);
    font-family: Inter, Arial, Helvetica, sans-serif;
    font-size: 24px;
    margin: 0;
    margin: 20px 0 20px 0;
    font-weight: 400;
    word-break: keep-all;
}

#features-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    width: 637px;
    height: 100px;
}

.feature {
    font-family: Inter, Arial, Helvetica, sans-serif;
    color: black;
    font-size: 20px;
    font-weight: 500;
}

#hero-right {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50%;
    height: 100%;
}

#studyingIMG {
    width: 649px;
    height: 640px;
    padding-right: calc((50% - 670px) / 2);
}

